--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Mi Proyecto</title>
 </head>
-<body background="fondo.jpg">
+<body background="aaaa.jpg">
   <center><h1 style="color: #30DBFA; font-family: Brodway; font-size: 30px">Pagina Principal</h1><br></center>
   <center><h1 style="color: Black; font-family: Broadway; font-size: 20px">Neosistemas</h1><br></center>
   <center><h1 style="color: Black; font-family: Broadway; font-size: 20px">Octavo</h1><br></center>
