--- a/p1.html
+++ b/p1.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Periodo 1</title>
 </head>
-<body background="f.jpg">
+<body background="aaaa.jpg">
 
 
  <center><h1 style="color: #FFFFFF; font-family: Brodway; font-size: 30px">Periodo Uno</h1><br></center>
