--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <center><h1 style="color: Black; font-family: Broadway; font-size: 20px">Octavo</h1><br></center>
   <center><h1 style="color: Black; font-family: Broadway; font-size: 20px">2021</h1><br></center>
   <center><h1 style="color: Black; font-family: Broadway; font-size: 20px">Samuel Monsalve</h1><br></center>
-  <center><img src="sam.PNG">></center>
+  <center><img src="sam.PNG"></center>
   <hr>
   <hr>
   <center><h1 style="color: Black; font-family: Broadway; font-size: 20px">Periodos</h1><br></center>
