--- a/p1.html
+++ b/p1.html
@@ -9,7 +9,7 @@
  <center><h1 style="color: #FFFFFF; font-family: Brodway; font-size: 30px">Periodo Uno</h1><br></center>
 <br>
 <br>
-<center><a href="Index.html"><img src="pp.png"></a></center>
-
+<a href="Index.html"><img src="pp.png"></a>
+<a href="Actividad1.html"><img src="a1.png">
 </body>
 </html>
