--- a/p1.html
+++ b/p1.html
@@ -11,5 +11,6 @@
 <br>
 <a href="Index.html"><img src="pp.png"></a>
 <a href="Actividad1.html"><img src="a1.png">
+<a href="parcial.html"><img src="pa.png"></a>	
 </body>
 </html>
