--- a/p1.html
+++ b/p1.html
@@ -9,8 +9,9 @@
  <center><h1 style="color: #FFFFFF; font-family: Brodway; font-size: 30px">Periodo Uno</h1><br></center>
 <br>
 <br>
-<a href="Index.html"><img src="pp.png"></a>
-<a href="Actividad1.html"><img src="a1.png">
-<a href="parcial.html"><img src="pa.png"></a>	
+<center><a href="Index.html"><img src="pp.png"></a></center>
+<center><a href="Actividad1.html"><img src="a1.png"></a></center>
+<center><a href="parcial.html"><img src="pa.png"></a></center>
+<center><a href="act2.html"><img src="a2.png"></a></center>	
 </body>
 </html>
