--- a/p1.html
+++ b/p1.html
@@ -13,5 +13,6 @@
 <center><a href="Actividad1.html"><img src="a1.png"></a></center>
 <center><a href="parcial.html"><img src="pa.png"></a></center>
 <center><a href="act2.html"><img src="a2.png"></a></center>	
+<center><a href="index2.html"><img src="acss.png"></a></center>
 </body>
 </html>
