--- a/p1.html
+++ b/p1.html
@@ -14,6 +14,6 @@
 <center><a href="parcial.html"><img src="pa.png"></a></center>
 <center><a href="act2.html"><img src="a2.png"></a></center>	
 <center><a href="index2.html"><img src="acss.png"></a></center>
-<center><a href="index3.html"><img src="ultim.png"></a></center>
+<center><a href="https://samumc6.github.io/Final/"><img src="fi.png"></a></center>
 </body>
 </html>
