--- a/p2.html
+++ b/p2.html
@@ -3,13 +3,14 @@
 <head>
 	<title>Periodo 1</title>
 </head>
-<body background="f.jpg">
+<body background="hae.jpg">
 
 
  <center><h1 style="color: #FFFFFF; font-family: Brodway; font-size: 30px">Periodo Dos</h1><br></center>
 <br>
 <br>
-<center><a href="Index.html"><img src="pp.png"></a></center>
+<center><a href="index.html"><img src="pap.png"></a></center>
+<center><a href="Act2p.html"><img src="aa.png"></a></center>
 
 </body>
 </html>
