--- a/Act2p.html
+++ b/Act2p.html
@@ -6,8 +6,8 @@
 <body background="hae.jpg">
  <center><h1 style="color: #163BF9; font-family: Brodway; font-size: 30px">Activdad 1</h1><br></center>
  <center><img src="A.PNG"></center>
-<center><h1 style=" font-size: 25px">La verdad como es un nuevo tema me toma tiempo adaptarme a el.
-Para mi no esta facil, peor tampoco dificil; esta actividad logre comprenderla,
-Espero entender y adaptarme con facilidad.</h1></center>
+<center><h1 style=" font-size: 25px">La verdad como es un nuevo tema me toma tiempo adaptarme.
+Para mi no esta fácil pero tampoco difícil; Al final de la práctica logre comprenderla y realizarla.
+Espero entender y adaptarme con facilidad en las próximas.</h1></center>
 </body>
 </html>
