--- a/index3.html
+++ b/index3.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Actividad 4</title>
-	<link rel="stylesheet" type="text/css" href="esti3.css">
+	<title>Eventos</title>
+	<link rel="stylesheet" type="text/css" href="index3.css">
 </head>
 <body>
-    <div class="gigante">
-    	<div class="gigag">
-    		<div class="gigap">
-    		<div class="gigas">
-    			<div class="textil">Ana sofia</div>
-    		</div>
-    		</div>
-    	</div>
-    	<div class="mediagi">
-    	<div class="te">Quien es</div>	
-    	<div class="madiag"></div>
-    	<div class="madiap"><div class="tx">
-    		Es una persona amable y alegra, le gusta la cultura asiática, sobre todo la China y la coreana.
-Su Grupo favorito es boy story.
-Tiene 13 años y nacio el 22 de junio del 2007</div><div class="foto"></div></div>
-<div class="pequep">
-	<div class="foto1"></div>
-	<div class="foto2"></div>
-	<div class="foto3"></div>
-	<div class="foto4"></div>
-<div class="ya"><div class="tx">Ana hermosa, diva, preciosa reyna</div></div>
+<div class="foto">
+	<div class="letrero"></div>
+	<div class="letre"></video></div>
 </div>
-   	</div>
-    </div>
+<div class="auto">
+<div class="foto2">✨HOY ES UN DIA ESPECIAL✨
+	<div class="letrer"></div>
+	</div>
+</div>
+
+<div class="foto3">
+	<div class="let"></div>
+	<div class="letr"></video></div>
+</div>
+<div class="auto2">
+<div class="foto4">✨SI MIS AMIGOS VALEN ORO, OBVIO QUE LOS VENDO✨
+	<div class="le"></div>
+	</div>
+	</div>
 </body>
 </html>
