--- a/p2.html
+++ b/p2.html
@@ -3,14 +3,14 @@
 <head>
 	<title>Periodo 2</title>
 </head>
-<body background="hae.jpg">
+<body background="hae21.jpg">
 
 
  <center><h1 style="color: #FFFFFF; font-family: Brodway; font-size: 30px">Periodo Dos</h1><br></center>
 <br>
 <br>
-<center><a href="index.html"><img src="pap.png"></a></center>
+<center><a href="index.html"><img src="aaxn.png"></a></center>
 <center><a href="Act2p.html"><img src="aa.png"></a></center>
-
+<center><a href="index3.html"><img src="mA.png"></a></center>
 </body>
 </html>
